--- a/Data Collection Notebook.ipynb
+++ b/Data Collection Notebook.ipynb
@@ -34,7 +34,7 @@
     "from Models.MMC import MMC, sgo_types\n",
     "from Models.CAP import CAP\n",
     "from Models.HMC import HMC\n",
-    "from Models.DBN import DBN\n",
+    "from Models.FMC import FMC\n",
     "\n",
     "from Models.MAX import MAX\n",
     "\n",
@@ -347,10 +347,10 @@
     "\n",
     "training_master = []\n",
     "testing_master = []\n",
-    "# implement DBN\n",
+    "# implement FMC\n",
     "o = 3\n",
-    "methods = [MMC, MTD, CAP, HMC, MAX, DBN]\n",
-    "types = [\"MMC\", \"MTD\", \"CAP\", \"HMC\", \"MAX\", \"DBN\"]\n",
+    "methods = [MMC, MTD, CAP, HMC, MAX, FMC]\n",
+    "types = [\"MMC\", \"MTD\", \"CAP\", \"HMC\", \"MAX\", \"FMC\"]\n",
     "for _ in range(amount_to_average):\n",
     "\n",
     "    X_train, X_test, y_train, y_test = MMC_Data.MMC_data.gen_data(state_count,3,30000, True)## Fitting model\n",
@@ -541,7 +541,7 @@
    "outputs": [],
    "source": [
     "# MMC is the new one\n",
-    "# implement CAP, HMC, MTD, DBN, MAX SMILE, MAX COUNTING\n",
+    "# implement CAP, HMC, MTD, FMC, MAX SMILE, MAX COUNTING\n",
     "from markov import MarkovChain\n",
     "o = 3\n",
     "methods = [CAP, MMC, HMC, MAX]\n",
