--- a/Perform-TTest-Gen-Graphs.ipynb
+++ b/Perform-TTest-Gen-Graphs.ipynb
@@ -63,52 +63,8 @@
     "!git clone -b master2 https://github.com/forksup/thesis_research/\n",
     "!pip install progressbar fastparquet\n",
     "%cd thesis_research\n",
-    "from run_experiments import run_experiment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "c5531599-9570-4fdb-bb32-c3b5502c1fa6",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-18T03:21:15.538336Z",
-     "iopub.status.busy": "2022-08-18T03:21:15.537895Z",
-     "iopub.status.idle": "2022-08-18T03:21:18.024292Z",
-     "shell.execute_reply": "2022-08-18T03:21:18.023258Z",
-     "shell.execute_reply.started": "2022-08-18T03:21:15.538308Z"
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: tabulate in /usr/local/lib/python3.9/dist-packages (0.8.10)\n",
-      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
-      "\u001B[0mTabulate Table:\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'rows' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [17]\u001B[0m, in \u001B[0;36m<cell line: 4>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mtabulate\u001B[39;00m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mTabulate Table:\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m----> 4\u001B[0m \u001B[38;5;28mprint\u001B[39m(tabulate(\u001B[43mrows\u001B[49m, headers\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mfirstrow\u001B[39m\u001B[38;5;124m'\u001B[39m))\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'rows' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install tabulate\n",
-    "import tabulate\n",
-    "print('Tabulate Table:')\n",
-    "print(tabulate(rows, headers='firstrow'))"
+    "from run_experiments import run_experiment\n",
+    "from Datasets import Markov_Data, MMC_Data, Fruit_Data\n"
    ]
   },
   {
@@ -2572,63 +2528,30 @@
     }
    ],
    "source": [
-    "from run_experiments import plot_data, metrics, find_average\n",
-    "from matplotlib import pyplot as plt\n",
+    "from Models.model_sources.markov_source import MarkovChain\n",
     "from Models.MMC import MMC\n",
     "from Models.HMC import HMC\n",
     "from Models.DBN import FMC\n",
     "from Models.model_sources.mtd_source import MTD\n",
-    "import pickle\n",
-    "import os\n",
-    "import itertools\n",
-    "from scipy import stats\n",
     "\n",
-    "plt.rcParams.update({'font.size': 22})\n",
-    "metrics = [\"Testing Accuracy\", \"Training Times\"]\n",
+    "from Datasets import Markov_Data, MMC_Data, Fruit_Data, Markov_Data_Large\n",
     "\n",
-    "from os import walk\n",
+    "methods = [HMC, FMC, MMC, MTD]\n",
+    "types = [m.__name__ for m in methods]\n",
+    "data_generator = Markov_Data.HMM_Data\n",
+    "data_size_args = 5000\n",
+    "state_size_args = 7\n",
+    "order_size_args = (3,11,1)\n",
+    "avg_amt = 30\n",
+    "threading = True\n",
     "\n",
-    "basepath = \"/storage/data/\"\n",
+    "metric_to_test = \"order\"\n",
     "\n",
+    "# Data size 2k-20k, State size 3-15, order 3-10 , choose these when you have to fix parameters: datasize 5k, state size 7, order 5\n",
+    "# order, state_space, or data_size\n",
     "\n",
-    "method_perms = list(itertools.permutations(methods, 2))\n",
-    "for filename in os.listdir(basepath):\n",
-    "    path = basepath+filename\n",
-    "    \n",
-    "    metric_to_test = path.split(\"/\")[-1].split(\"_\")[1].split(\".\")[0]\n",
-    "    data_type = path.split(\"/\")[-1].split(\"_\")[0]\n",
-    "    \n",
-    "    with open(path, 'rb') as f:\n",
-    "        x = pickle.load(f)\n",
-    "    \n",
-    "    t_test = []\n",
-    "\n",
-    "    for st in x:\n",
-    "        for m1, m2 in method_perms:\n",
-    "            n1 = m1.__name__\n",
-    "            n2 = m2.__name__\n",
-    "            print(f\"T-Test for {n1} & {n2}\")\n",
-    "            tstat, pval = stats.ttest_rel(x[st][n1]['Testing Accuracy'][0][0], x[st][n2]['Testing Accuracy'][0][0])\n",
-    "            print(\"t-value: \", tstat, \" p-value: \", pval)\n",
-    "\n",
-    "    for key, data in x.items():\n",
-    "        for method in data:\n",
-    "            for m in metrics:\n",
-    "                x[key][method][m] = [(find_average(x[key][method][m][0][0]), x[key][method][m][0][1])]\n",
-    "\n",
-    "    methods = [HMC, FMC, MMC, MTD]\n",
-    "    types = [m.__name__ for m in methods]\n",
-    "\n",
-    "    fig, axs = plt.subplots(len(metrics), 1, figsize=(20, 13))\n",
-    "    fig.suptitle(f'Data Type: {data_type}', y=1.08)\n",
-    "    colors = [\"#21d185\", \"#d1218b\", \"#0000FF\", \"#FFA500\"]\n",
-    "    for im, met in enumerate(metrics):\n",
-    "        plot_data(x.keys(), x, met, met, axs[im], colors, \"state\", types)\n",
-    "    \n",
-    "    axs[-1].set_xlabel(metric_to_test)\n",
-    "    fig.tight_layout()\n",
-    "    fig.savefig(\"experiment_results/\"+data_type+\"_\"+metric_to_test+\".png\")\n",
-    "    #fig.show()"
+    "data_results, sgo_type = run_experiment(methods, avg_amt, data_generator, threading, metric_to_test, data_size_args,\n",
+    "                                        state_size_args, order_size_args, f\"/storage/data/HMM_Order.pkl\")"
    ]
   },
   {
