Finalizing project & added readme

--- a/Perform Experiment.ipynb
+++ b/Perform Experiment.ipynb
@@ -47,6 +47,7 @@
     "# Data size 2k-20k, State size 3-15, order 3-10 , choose these when you have to fix parameters: datasize 5k, state size 7, order 5\n",
     "# order, state_space, or data_size\n",
     "\n",
+    "# This is used on a server with a shared storage on /storage/ to save all the results. Once multiple experiments are ran, Perform-TTest-Gen-Graphs can be ran to analyze the results and generate graphs.\n",
     "data_results, sgo_type = run_experiment(methods, avg_amt, data_generator, threading, metric_to_test, data_size_args,\n",
     "                                        state_size_args, order_size_args, f\"/storage/data/HMM_Order.pkl\")"
    ],
