--- a/Example_Notebooks/experiment_on_bitcoin_price.ipynb
+++ b/Example_Notebooks/experiment_on_bitcoin_price.ipynb
@@ -2,17 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from Models.model_sources.markov_source import MarkovChain\n",
     "from Models.MMC import MMC\n",
@@ -30,7 +21,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "is_executing": true
     }
    }
   },
@@ -44,10 +35,7 @@
     "#"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -102,17 +90,17 @@
     "\n",
     "df.loc[df.Change < 0.0, 'Change_enc'] = \"drop\"\n",
     "\n",
-    "\"\"\"df.loc[df.Change <= -std, 'Change_enc'] = \"big drop\"\n",
+    "df.loc[df.Change <= -std, 'Change_enc'] = \"big drop\"\n",
     "df.loc[df.Change <= -2*std, 'Change_enc'] = \"bigger drop\"\n",
     "df.loc[df.Change <= -3*std, 'Change_enc'] = \"biggest drop\"\n",
-    "\"\"\"\n",
+    "\n",
     "\n",
     "df.loc[df.Change > 0.0, 'Change_enc'] = \"rise\"\n",
     "\n",
-    "\"\"\"df.loc[df.Change >= std, 'Change_enc'] = \"big rise\"\n",
+    "df.loc[df.Change >= std, 'Change_enc'] = \"big rise\"\n",
     "df.loc[df.Change >= 2*std, 'Change_enc'] = \"bigger rise\"\n",
     "df.loc[df.Change >= 3*std, 'Change_enc'] = \"biggest rise\"\n",
-    "\"\"\"\n",
+    "\n",
     "\n",
     "\n",
     "# New York\n",
@@ -155,10 +143,7 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -169,10 +154,7 @@
     "df['ma_cross'] = [''.join([str(x) for _,x in sorted(zip([row['ma5'],row['ma8'],row['ma13']],[0,1,2]))]) for key,row in df.iterrows()]"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -192,10 +174,7 @@
     "df['Change'].rolling(window=5, min_periods=5).mean()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -269,10 +248,7 @@
     "print(df[window_length-1:window_length+5])"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -293,19 +269,12 @@
     "df['rs_state'] = [convert_rs(df['rs'].values[i]) for i in range(len(df))]"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Fit models"
    ]
@@ -332,10 +301,7 @@
     "x_tr, y_tr = pe.transform(x, y)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -427,7 +393,6 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
      "is_executing": true
     }
    }
@@ -441,10 +406,7 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -464,10 +426,7 @@
     "drop_prob"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -489,10 +448,7 @@
     "create_bar_graph(results_testing, f\"{symbol} Intraday {interval} Interval Latest 15% Order {order}\", [m.__name__ for m in methods if m != MTD])"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -512,19 +468,12 @@
     "[m.__name__ for m in methods]"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Choose model"
    ]
@@ -546,10 +495,7 @@
     "mmc.predict([x_tr[-1]])"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -558,10 +504,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
