--- a/scratch_notebooks/Data Collection Notebook.ipynb
+++ b/scratch_notebooks/Data Collection Notebook.ipynb
@@ -2,70 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-25T14:32:10.974865Z",
-     "start_time": "2020-04-25T14:32:10.227208Z"
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "from Models.MMC import MMC, sgo_types\n",
-    "import datetime\n",
-    "import random\n",
-    "from numpy.random import choice\n",
-    "from markov import MarkovChain\n",
-    "from Models.MMC import MMC, sgo_types\n",
-    "from Models.CAP import CAP\n",
-    "from Models.HMC import HMC\n",
-    "from Models.FMC import FMC\n",
-    "\n",
-    "from Models.MAX import MAX\n",
-    "\n",
-    "from Datasets import Markov_Data, MMC_Data, Fruit_Data\n",
-    "\n",
-    "from mtdlearn.mtd import MTD\n",
-    "from mtdlearn.datasets import ChainGenerator\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "## Generate data\n",
-    "First, generate a standard 1st order Markov Model cg."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
@@ -75,10 +11,7 @@
     "cg = ChainGenerator(states, order=1, min_len= 3, max_len= 3)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -98,10 +31,7 @@
     "cg.transition_matrix"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -121,10 +51,7 @@
     "MMC_Data.MMC_data.gen_data(4,3,20000)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -134,10 +61,7 @@
     "Now from the set of all SGOs randomly select one SGO"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -152,10 +76,7 @@
     "y = [choice(state_num, 1, p=cg.transition_matrix[MMC.find_high(x_, SGO)])[0] for x_ in x ]"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -175,10 +96,7 @@
     "SGO"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -198,10 +116,7 @@
     "labels.values()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -213,10 +128,7 @@
     "For example, if the episode is ['C', 'B', 'C'] and the SGO ['C', 'A', 'D', 'B'], the 'C' distribution will be used to generate the output."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -240,20 +152,14 @@
     "X_train, X_test, y_train, y_test = MMC_Data.MMC_data.gen_data(state_count, 3, 20000, True)## Fitting model"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "markdown",
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -286,10 +192,7 @@
     "model2 = MMC(arguments)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -299,10 +202,7 @@
     "Now we will convert the dictionary format into a traditional CPT table format"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -311,10 +211,7 @@
     "Now we must compare these two arrays to verify training is done accurately"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -368,10 +265,7 @@
     "    testing_master.append(results_testing)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -391,10 +285,7 @@
     "training_master"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -406,10 +297,7 @@
     "    return sum(arr)/len(arr)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -431,10 +319,7 @@
     "    training_times += [find_average([av_[i][1] for av_ in training_master])]"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -461,10 +346,7 @@
     "    plt.show()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -484,10 +366,7 @@
     "acc_training"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -501,10 +380,7 @@
     "create_bar_graph({types[i] : training_times[i] for i in range(len(training_times))}, \"Training Times\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -529,10 +405,7 @@
     "test_model(model2)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -555,10 +428,7 @@
     "    results.append(MarkovChain.calculate_time(model.test, args_testing))\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -568,9 +438,6 @@
     "ExecuteTime": {
      "end_time": "2020-04-25T14:32:40.644638Z",
      "start_time": "2020-04-25T14:32:40.628794Z"
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -603,10 +470,7 @@
     "    pd.DataFrame({'state0': X_train[:,col], 'state1':y_train}).to_csv(save_path+f\"train_data_gap{gap+1}_train.txt\", index=False)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -619,10 +483,7 @@
     "    pickle.dump([X_test, y_test], handle)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -644,10 +505,7 @@
     "# make sure all the values are the same ie they are deterministic"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -663,10 +521,7 @@
     "save_data(X_test,  y_test, \"test.txt\")\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -676,9 +531,6 @@
     "ExecuteTime": {
      "end_time": "2020-04-25T14:32:42.294388Z",
      "start_time": "2020-04-25T14:32:41.180808Z"
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -724,19 +576,12 @@
     "X_train[:,len(models)-i-1:]"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Information criteria"
    ]
@@ -748,9 +593,6 @@
     "ExecuteTime": {
      "end_time": "2020-04-25T14:32:44.489848Z",
      "start_time": "2020-04-25T14:32:44.481227Z"
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -774,9 +616,6 @@
     "ExecuteTime": {
      "end_time": "2020-04-25T14:32:45.094917Z",
      "start_time": "2020-04-25T14:32:45.077490Z"
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -795,11 +634,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Trained parameters"
    ]
@@ -811,9 +646,6 @@
     "ExecuteTime": {
      "end_time": "2020-04-25T14:32:48.275128Z",
      "start_time": "2020-04-25T14:32:48.267360Z"
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -837,9 +669,6 @@
     "ExecuteTime": {
      "end_time": "2020-04-25T14:32:49.255870Z",
      "start_time": "2020-04-25T14:32:49.251150Z"
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -858,11 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Predict"
    ]
@@ -874,9 +699,6 @@
     "ExecuteTime": {
      "end_time": "2020-04-25T14:32:57.691386Z",
      "start_time": "2020-04-25T14:32:57.686617Z"
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -903,10 +725,7 @@
     "result"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -926,10 +745,7 @@
     "sum(list(map(np.argmax,cg.predict_proba(np.array(X_test)))) == y_test)/len(y_test)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -941,10 +757,7 @@
     "from sklearn.preprocessing import normalize"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -975,10 +788,7 @@
     "        gap_probs[i][s] =  [s/sum(sum_list[0]) for s in sum_list[0]]"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1002,10 +812,7 @@
     "# Array is in that orderc"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1026,10 +833,7 @@
     "sum(list(map(lambda x: np.argmax(x) % len(states), [list(ch(*[gap_probs[gap-1][item[-gap]] for gap in range(len(gap_probs))])) for item in X_test])) == y_test) / len(y_test)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1053,10 +857,7 @@
     "np.argmax(list(ch(*[gap_probs[gap-1][item[-gap]] for gap in range(len(gap_probs))])))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1067,10 +868,7 @@
     "[gap_probs[gap-1][item[-gap]] for gap in range(len(gap_probs))]"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1081,10 +879,7 @@
     "list(ch(*[gap_probs[gap-1][item[-gap]] for gap in range(len(gap_probs))]))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1095,10 +890,7 @@
     "sum(list(map(np.argmax,cg.predict_proba(np.array(X_test)))) == y_test)/len(y_test)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1110,10 +902,7 @@
     "gap_probs[0][0]"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1124,10 +913,7 @@
     "cg._label_dict.values"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1136,10 +922,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1150,10 +933,7 @@
     "cg._label_dict"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1164,10 +944,7 @@
     "np.array(X_test)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1176,10 +953,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
