--- a/Example_Notebooks/run_experiment_notebook.ipynb
+++ b/Example_Notebooks/run_experiment_notebook.ipynb
@@ -101,22 +101,23 @@
     "from Models.model_sources.mtd_source import MTD\n",
     "\n",
     "from Datasets import Markov_Data, MMC_Data, Fruit_Data, Markov_Data_Large\n",
-    "    \n",
+    "from run_experiments import run_experiment\n",
+    "\n",
     "methods = [HMC, FMC, MMC, MMC_M]\n",
     "types = [m.__name__ for m in methods]\n",
-    "print(types)\n",
     "data_generator = Markov_Data.HMM_Data\n",
+    "\n",
+    "                # Start, Step, Final value\n",
     "data_size_args = (75_000,150_000,5_000)\n",
     "state_size_args = 7\n",
     "order_size_args = 5\n",
     "avg_amt = 5\n",
     "threading = True\n",
     "\n",
+    "# Can be one of order, state_space, or data_size\n",
     "metric_to_test = \"data_size\"\n",
     "\n",
     "# Data size 2k-20k, State size 3-15, order 3-10 , choose these when you have to fix parameters: datasize 5k, state size 7, order 5\n",
-    "# order, state_space, or data_size\n",
-    "\n",
     "data_results, sgo_type = run_experiment(methods, avg_amt, data_generator, threading, metric_to_test, data_size_args,\n",
     "                                        state_size_args, order_size_args, f\"/storage/data/HMM_Data.pkl\")"
    ]
